# fractals

./: .clangd  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  annotated.html  classes.html  dir_239302eb81257c8fe413f0d3f471e82d.html  dir_3e489c3bd6219cadf1d1cdf27b0f9b21.html  dir_b4cad7074c2c537630e3aa48c3ef8dec.html  dir_c57ab8857d6d16b1c4b141331fbeaf0e.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  pages.html
.github/workflows/: doxygen.yml
d0/d5e/: structUniformLocations.html
d1/d08/: classWindow-members.html
d1/d60/: window_8hh.html  window_8hh_source.html
d1/d9d/: structUniformLocations-members.html
d2/d52/: CONTRIBUTING_8md.html
d2/dc1/: md_CONTRIBUTING.html
d3/d5c/: md_CODE_OF_CONDUCT.html
d3/dff/: shader_8hh.html  shader_8hh_source.html
d4/de0/: classShader-members.html
d4/deb/: shader_8cc.html
d5/d55/: structSceneData.html
d5/da1/: HACKING_8md.html
d5/dc3/: logger_8hh.html  logger_8hh_source.html
d6/dd0/: md_BUILDING.html
d6/de0/: md_HACKING.html
d7/d60/: window_8cc.html
d9/d0f/: main_8cc.html
d9/d69/: classShader.html
da/ddd/: README_8md.html
db/d27/: BUILDING_8md.html
db/d2e/: structSceneData-members.html
db/d64/: namespaceLogger.html
dc/dc4/: classWindow.html
df/dc5/: CODE__OF__CONDUCT_8md.html
docs/: Doxyfile  Doxyfile.in
explorer/: CMakeLists.txt
explorer/include/: shader.hh  window.hh
explorer/shaders/: fragment_shader.glsl  vertex_shader.glsl
explorer/src/: main.cc  shader.cc  window.cc
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+9 more)
test/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/: load_image.hh  logger.hh
utils/src/: load_image.cc
